# universal_robots_trajectories

./: README.md
ur3_trajectory_senders/: CMakeLists.txt  package.xml
ur3_trajectory_senders/include/ur3_trajectory_senders/: interpolation_utils.hpp  moveit_ik.hpp  pose_utils.hpp
ur3_trajectory_senders/launch/: ik_solver.launch.py
ur3_trajectory_senders/src/: capture_interpolate_node.cpp  ik_queue_executor_node.cpp  ik_solver_node.cpp  interpolation_utils.cpp  pose_utils.cpp  send_trajectory_action.cpp  send_trajectory_topic.cpp
ur3_trajectory_senders/test/: interpolation_utils_test.cpp  test_pose_utils.cpp
