<?xml version="1.0"?>
<package format="3">
  <name>ur3_trajectory_senders</name>
  <version>0.0.1</version>
  <description>UR3 trajectory demo: capture, fit sphere, sample views, and execute.</description>
  <maintainer email="aleksantari@gmail.com">santari</maintainer>
  <license>MIT</license>

  <!-- Buildtool -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <!-- Core runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>Eigen3</depend>

  <!-- Trajectory & action -->
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>builtin_interfaces</depend>

  <!-- Testing -->
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>